[gd_scene load_steps=4 format=2]

[ext_resource path="res://duck.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 43.0465

[node name="duck" type="Area2D"]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="duck_type" type="Sprite" parent="."]
texture = ExtResource( 2 )

[connection signal="mouse_entered" from="." to="." method="_on_duck_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_duck_mouse_exited"]
